[gd_scene load_steps=10 format=3 uid="uid://dr5gv3nhxomby"]

[ext_resource type="Script" path="res://ui/combat_map_view_components/unit_level_up/unit_level_up.gd" id="1_1h3xc"]
[ext_resource type="Theme" uid="uid://d038xrv8o2iwr" path="res://resources/themes/Header_text.tres" id="1_3jusj"]
[ext_resource type="PackedScene" uid="uid://pmy8teg4tftq" path="res://ui/combat_map_view_components/unit_level_up/level_up_attribute_container.tscn" id="1_obgw1"]
[ext_resource type="Theme" uid="uid://cm7p7jgsvnp81" path="res://resources/themes/unit_status_subtext.tres" id="3_7xwk1"]
[ext_resource type="Texture2D" uid="uid://sucjko8qgioh" path="res://resources/sprites/units/destroyer_map.tres" id="3_85s4i"]
[ext_resource type="Theme" uid="uid://c55bq2g52bloq" path="res://resources/themes/Unit_status_detailed_panel.tres" id="3_lh7o5"]
[ext_resource type="FontFile" uid="uid://blovgibarp2q2" path="res://resources/fonts/CrimsonText-Bold.ttf" id="4_qcc2n"]


[sub_resource type="Theme" id="Theme_v3vgv"]
default_font_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63lk6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.968627, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="UnitLevelUp" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1h3xc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -100.5
offset_right = 312.0
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 624.0
offset_bottom = 197.0

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme = SubResource("Theme_v3vgv")
theme_override_styles/panel = SubResource("StyleBoxFlat_63lk6")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel"]
layout_mode = 0
offset_right = 624.0
offset_bottom = 46.0
theme = ExtResource("1_3jusj")

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="UnitTypeLabel" type="Label" parent="Panel/VBoxContainer/Panel/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Archer
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Panel/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="UnitNameLabel" type="Label" parent="Panel/VBoxContainer/Panel/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.490196)
text = "Craig"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="Panel/VBoxContainer/Panel/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelValueLabel" type="Label" parent="Panel/VBoxContainer/Panel/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelValue" type="Label" parent="Panel/VBoxContainer/Panel/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_7xwk1")
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("4_qcc2n")
theme_override_font_sizes/font_size = 24
text = "+ 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="StatsGrid" type="GridContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
theme = ExtResource("3_lh7o5")
columns = 2

[node name="HPContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/StatsGrid" instance=ExtResource("1_obgw1")]
layout_mode = 2
attribute_name = "Health"
attribute_value = 60

[node name="StrengthContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/StatsGrid" instance=ExtResource("1_obgw1")]
layout_mode = 2
attribute_name = "Strength"
attribute_value = 60

[node name="MagicContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/StatsGrid" instance=ExtResource("1_obgw1")]
layout_mode = 2
attribute_name = "Magic"
attribute_value = 60

[node name="SkillContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/StatsGrid" instance=ExtResource("1_obgw1")]
layout_mode = 2
attribute_name = "Skill"
attribute_value = 60

[node name="SpeedContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/StatsGrid" instance=ExtResource("1_obgw1")]
layout_mode = 2
attribute_name = "Speed"
attribute_value = 60

[node name="LuckContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/StatsGrid" instance=ExtResource("1_obgw1")]
layout_mode = 2
attribute_name = "Luck"
attribute_value = 60

[node name="DefenseContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/StatsGrid" instance=ExtResource("1_obgw1")]
layout_mode = 2
attribute_name = "Defense"
attribute_value = 60

[node name="MagicDefenseContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/StatsGrid" instance=ExtResource("1_obgw1")]
layout_mode = 2
attribute_name = "Magic Def"
attribute_value = 60

[node name="UnitSprite" type="TextureRect" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("3_85s4i")

[node name="UnitSprite2" type="TextureRect" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/UnitSprite"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
offset_left = 6.0
offset_top = 6.0
offset_right = 134.0
offset_bottom = 134.0
texture = ExtResource("3_85s4i")
